--- a/_sass/0-settings/_typography.scss
+++ b/_sass/0-settings/_typography.scss
@@ -7,7 +7,7 @@ $base-font-size: 15px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Open Sans', Helvetica Neue, Helvetica, Arial, sans-serif;
+$base-font-family: 'Times New Roman', Helvetica Neue, Helvetica, Arial, sans-serif;
 $base-line-height: 28px;
 
 
